Fixed alignment in modal boxes - Added responsive design to X button - Fixed overflowing mobile hover padding for the modal box tabs

--- a/resources/assets/sass/components/_modal-login.scss
+++ b/resources/assets/sass/components/_modal-login.scss
@@ -49,7 +49,8 @@
   font-size: 28px;
   font-weight: bold;
   position: relative;
-  right: 15px;
+  right: 5%;
+  top: 18%;
 }
 
 .close:hover,
@@ -75,7 +76,7 @@ li.modalTab a {
   display: block;
   color: white;
   text-align: center;
-  padding:14px 16px;
+  padding: 26px 16px;
   text-decoration: none;
   position: relative;
   transition: 0.3s;
